<resources>
    <string name="app_name">Techpower</string>
    <string name="app_preferences" translatable="false">techpower</string>
    <string name="app_api" translatable="false"></string>
    <string name="nav_login">Login</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_userPage">User Page</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_account">Account</string>

    <!-- SettingsActivity -->
    <string name="settings_et_api">Insert url here</string>
    <string name="settings_tv_api">API Url:</string>
    <string name="settings_btn_connect">Save</string>
    <string name="settings_api_saved">API Saved Successfully</string>

    <!-- Logout -->
    <string name="nav_logout">Logout</string>
    <string name="logout_success">You've been logged out</string>

    <!-- Login -->
    <string name="btn_login">Login</string>
    <string name="login_success">Welcome </string>
    <string name="login_incorrect">Username or password incorrect</string>

    <!-- Sign Up -->
    <string name="nav_signup">Sign up</string>
    <string name="btn_signup">Sign up</string>
    <string name="et_username">Username</string>
    <string name="et_email" translatable="false">E-mail</string>
    <string name="et_password">Password</string>
    <string name="et_confirmPassword">Confirm Password</string>
    <string name="et_firstName">First name</string>
    <string name="et_lastName">Last name</string>
    <string name="et_phone">Phone number</string>
    <string name="et_address">Address</string>
    <string name="et_postalCode">Postal code</string>
    <string name="et_city">City</string>
    <string name="et_country">Country</string>
    <string name="et_nif" translatable="false">NIF</string>
    <string name="tv_signup">Sign Up</string>
    <string name="signup_success">Account Created Successfully!</string>
    <string name="signup_error">ERROR!\nUsername, E-mail or NIF Already in use.</string>

    <!-- User Page -->
    <string name="update_success">User data updated successfully!</string>
    <string name="update_error">There was an error updating user data</string>
    <string name="delete_success">User deleted successfully!</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_delete">DELETE ACCOUNT</string>
    <string name="user_delete_alert_cancel">Cancel</string>
    <string name="user_delete_alert_ok">Delete Account</string>
    <string name="user_delete_alert_dialog">Are you sure you want to delete your account?</string>

    <!-- Product Details -->
    <string name="details_btn_addToCart">Add to Cart</string>
    <string name="add_cart">Product added to cart</string>

    <!-- Form Error Messages -->
    <string name="error_field_required">Data incorrect</string>
    <string name="error_password_not_match">Passwords don\'t match</string>
    <string name="error_invalid_tooShort">Too short</string>
    <!--<string name="error_invalid_tooLong">too long</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_phone">Phone number must have 9 digits</string>
    <string name="error_invalid_nif">NIF  must have 9 digits</string>-->

    <!-- Cart  Page -->
    <string name="btn_PlaceOrder">Place Order</string>
    <string name="tv_ShippingAdress">SHIPPING ADDRESS</string>
    <string name="tv_items">ITEMS</string>
    <string name="tv_Checkout">Checkout</string>
    <string name="textView_total">Total:</string>
    <string name="btn_checkout">CHECKOUT</string>
    <string name="cart_delete_alert_dialog">Are you sure you want to remove this item?</string>
    <string name="cart_item_delete_alert_ok">Remove</string>
    <string name="cart_item_delete_alert_cancel">Cancel</string>
    <string name="cart_quantity_0_alert_dialog">Setting the quantity to 0 will remove this item, do you want to remove it?</string>

    <!-- Checkout  Page -->
    <string name="label_quantity">Quantity:</string>
    <string name="sale_completed">Your purchase was completed with success</string>
    <string name="checkout_no_login">Please, make sure you are logged in!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout_title">Checkout</string>
    <string name="Cart_title">Cart</string>


</resources>
