<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20sp"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_username" />

            <EditText
                android:id="@+id/editText_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_username"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_address" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_password" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_confirmPassword" />

            <EditText
                android:id="@+id/editText_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_confirmPassword"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:id="@+id/textView_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_firstName" />

            <EditText
                android:id="@+id/editText_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_firstName"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_lastName" />

            <EditText
                android:id="@+id/editText_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_lastName"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_phone" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_phone"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_address" />

            <EditText
                android:id="@+id/editText_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_address"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_city" />

            <EditText
                android:id="@+id/editText_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_city"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_postalCode" />

            <EditText
                android:id="@+id/editText_postalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_postalCode"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_country" />

            <EditText
                android:id="@+id/editText_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_country"
                android:inputType="text" />

            <TextView
                android:id="@+id/textView_nif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/et_nif" />

            <EditText
                android:id="@+id/editText_nif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/et_nif"
                android:inputType="number" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/button_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_signup" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>