<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20sp"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/textView_apiUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_tv_api"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText_ApiUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/settings_et_api"
        android:inputType="text" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button_settings_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_btn_connect"/>
</LinearLayout>